--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "adding-data-persistence",
-  "version": "1.0.0",
-  "description": "Data Persistence Challenge",
-  "main": "index.js",
-  "scripts": {
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LambdaSchool/web-sprint-challenge-adding-data-persistence.git"
-  },
-  "license": "ISC",
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "eslint": "^7.28.0",
-    "jest": "^27.0.4",
-    "supertest": "^6.1.3"
-  }
+	"name": "adding-data-persistence",
+	"version": "1.0.0",
+	"description": "Data Persistence Challenge",
+	"main": "index.js",
+	"scripts": {
+		"test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent",
+		"start": "node index.js",
+		"server": "nodemon index.js",
+		"migrate": "npx knex migrate:up",
+		"rollback": "npx knex migrate:down"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/LambdaSchool/web-sprint-challenge-adding-data-persistence.git"
+	},
+	"license": "ISC",
+	"devDependencies": {
+		"cross-env": "^7.0.3",
+		"eslint": "^7.28.0",
+		"jest": "^27.0.4",
+		"nodemon": "^2.0.7",
+		"supertest": "^6.1.3"
+	},
+	"dependencies": {
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"knex": "^0.95.6",
+		"knex-cleaner": "^1.3.1",
+		"sqlite3": "^5.0.2"
+	}
 }
